# laymux

./: .gitignore  .lintstagedrc.mjs  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.ko.md  README.md  fix-flicker.md  package-lock.json  right-pane-human.txt  right-pane-wrong.txt
.claude/: ralph-loop.local.md
.claude/commands/: fix-issues.md  full-test.md  screenshot.md
.github/workflows/: lint.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: README.md  claude-code-automation.md  roadmap.md
docs/adr/: 0000-template.md  0001-osc-rust-single-pass.md  0002-automation-api-fixed-port-ip-allowlist.md  0003-cwd-single-source-syncgroup.md  0004-settings-vs-ui-state-separation.md  0005-display-state-raw-separation-compute.md  0006-embedded-mcp-server.md  0007-pane-identifier-trio.md  0008-shell-cursor-shadow-cursor.md  0009-process-tree-interactive-app-liveness.md  0010-notification-dismiss-on-program-focus-entry.md  0011-dectcem-cursor-park-fifth-layer.md  0012-focus-entry-clears-requires-action.md  0013-direct-remote-mode.md  0014-mcp-settings-configuration.md  0015-remote-terminal-state-ownership.md  0016-remote-access-runtime-vs-startup-enable.md  0017-mcp-dev-only-tools.md  0018-remote-navigation-ui-state.md  0019-remote-notification-interactions.md  0020-remote-dock-terminal-navigation.md  0021-remote-host-candidate-discovery.md  0022-cloud-connection-foundation.md  0023-cloud-pairing-loopback-oauth.md  0024-cloud-native-wss-tunnel.md  0025-dev-terminal-viewport-automation.md  0026-conpty-width-resize-repaint-filter.md  0027-remote-connection-graceful-recovery.md  0028-remote-soft-key-toolbar.md  0029-cloud-tunnel-follows-remote-control-gate.md  0029-detached-terminal-input-composer.md  (+31 more)
mcp-server/: Cargo.toml  README.md  setup.sh
mcp-server/src/: main.rs  mcp.rs
scripts/: kill-dev.sh  setup-mcp.ps1  setup-mcp.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: crash_dialog_smoke.rs
src-tauri/src/: activity.rs  automation_server.rs  browser_manager.rs  claude_activity.rs  claude_bullet.rs  clipboard.rs  codex_activity.rs  config_dir.rs  constants.rs  crash_reporter.rs  error.rs  git_watcher.rs  ipc_server.rs  lib.rs  lock_ext.rs  main.rs  osc.rs  osc_hooks.rs  output_buffer.rs  path_utils.rs  port_detect.rs  process.rs  process_tree.rs  pty.rs  pty_control.rs  pty_trace.rs  remote_session.rs  settings.rs  state.rs  terminal_env.rs  terminal_output.rs  terminal_protocol.rs
src-tauri/src/automation_server/: handlers_backend.rs  handlers_bridge.rs  helpers.rs  mcp.rs  mcp_resources.rs  mod.rs  settings_bridge.rs  types.rs
src-tauri/src/cli/: cli.rs  mod.rs
src-tauri/src/cloud/: commands.rs  keyring_store.rs  mod.rs  pairing.rs  tunnel.rs
src-tauri/src/commands/: claude_session.rs  file_ops.rs  ipc_dispatch.rs  misc.rs  mod.rs  remote_hosts.rs  terminal.rs  viewer_startup.rs
src-tauri/src/commands/viewer_startup/: tests.rs
src-tauri/src/ide_cli/: cli.rs  mod.rs
src-tauri/src/pty_control/: tests.rs
src-tauri/src/remote_server/: access.rs  appearance.rs  assets.rs  auth.rs  github_repo_routes.rs  lease.rs  mod.rs  navigation.rs  navigation_routes.rs  navigation_step_routes.rs  page.html  page.rs  routes.rs  terminal_info.rs  viewer_page.html  viewer_page.js  viewer_page.rs  viewer_routes.rs
src-tauri/src/remote_server/assets/: README.md
src-tauri/src/settings/: contract.rs  mod.rs  models.rs  schema.rs  semantic_validation.rs  validation.rs
src-tauri/src/terminal/: initial_execution_host.rs  mod.rs
src-tauri/src/terminal_output/: registry.rs  tests.rs
src-tauri/src/terminal_protocol/: tests.rs
src-tauri/tests/: clipboard_integration.rs  e2e_test.rs  integration_test.rs  settings_mcp_contract_test.rs  terminal_env_integration.rs
ui/: eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.test.ts  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  (+3 more)
(+331 files in other folders)
