[package]
name = "laymux-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for laymux cross-pane terminal control"

[[bin]]
name = "laymux-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
