[package]
name = "laymux"
version = "0.2.1"
edition = "2021"
description = "A terminal-focused IDE built with Tauri"
default-run = "laymux"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
png = "0.17"
font-kit = "0.14"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }

[lib]
name = "laymux_lib"
path = "src/lib.rs"

[[bin]]
name = "laymux"
path = "src/main.rs"

[[bin]]
name = "lx"
path = "src/bin/lx.rs"

