[package]
name = "laymux"
version = "0.7.9"
edition = "2021"
description = "A terminal-focused IDE built with Tauri"
default-run = "laymux"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ignored = "0.1"
schemars = "1.2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
png = "0.17"
font-kit = "0.14"
rmcp = { version = "1.4", features = ["server", "transport-streamable-http-server"] }
rfd = { version = "0.15", default-features = false }
base64 = "0.22"
if-addrs = "0.13"
keyring = { version = "3", features = ["windows-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation", "Win32_System_IO", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lib]
name = "laymux_lib"
path = "src/lib.rs"

[[bin]]
name = "laymux"
path = "src/main.rs"

[[bin]]
name = "lx"
path = "src/bin/lx.rs"
